# rust_file_tree

./: Cargo.toml  output.txt
src/: lib.rs  main.rs
src/structs/: directory.rs  file.rs  mod.rs  symlink.rs
