[package]
name = "file_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "file_tree"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
